--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -3,13 +3,24 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    >
+    android:background="@color/colorPrimary">
     <ImageView
         android:id="@+id/bing_pic_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
+
+    <android.support.v4.widget.DrawerLayout
+     android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/swipe_refresh"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <ScrollView
         android:id="@+id/weather_layout"
@@ -31,4 +42,14 @@
 
         </LinearLayout>
     </ScrollView>
+ </android.support.v4.widget.SwipeRefreshLayout>
+       <fragment
+           android:id="@+id/choose_area_fragment"
+           android:name="com.example.lenovo.coolweather.ChooseAreaFragment"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_gravity="start"
+           />
+
+    </android.support.v4.widget.DrawerLayout>
 </FrameLayout>
