--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -21,6 +21,7 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_alignParentLeft="true"
             android:background="@drawable/ic_back" />
     </RelativeLayout>
